# BG_AIPro

./: .env.example  .gitignore  .gitmodules  pyproject.toml  resume_server.py  run_server.py
.github/workflows/: deploy-hugo.yml
data/: resume.yaml
docs/: architecture.md  live_document_resume_api.md
hugo_site/: hugo.yaml
hugo_site/.github/workflows/: deploy.yml
hugo_site/content/: about.md  privacy.md  search.md
hugo_site/content/posts/: 2025-12-01-chatgpt-vs-claude-vs-gemini.md  2025-12-02-open-source-llm-comparison.md  2025-12-03-prompt-engineering-guide.md  2025-12-04-notion-ai-productivity-tools.md  2025-12-05-ai-image-generation-comparison.md  2025-12-07-ai-productivity-automation.md  2025-12-08-ai-translation-tools-comparison.md  2025-12-09-ai-side-project-income.md  2025-12-11-cursor-ai-ide-guide.md  2025-12-12-ai-code-review-automation.md  2025-12-13-github-copilot-tips.md  2025-12-15-vibe-coding-guide.md  2025-12-16-gpts-custom-ai-guide.md  2025-12-17-claude-code-workflow-guide.md  2025-12-19-ollama-local-llm-guide.md  2025-12-25-claude-api-guide.md  (+60 more)
research/: blog_platform_comparison.md  seo_topics_ai_2026-01-29.json
scripts/: deploy.bat  deploy.sh  setup_local.bat  test_hugo_publish.py
src/: cli.py  config.py  models.py
src/ai/: base.py  claude.py  local_llm.py
src/pipeline/: orchestrator.py  planner.py  reviewer.py  seo_research.py  writer.py
src/publishers/: base.py  hugo.py  naver.py  wordpress.py
src/resume/: __init__.py  api.py  models.py
topics/finance/: config.yaml
topics/lifestyle/: config.yaml
topics/tech/: config.yaml
(+11 files in other folders)
